err/collective.contentmapper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/tagNavigator'...
Listing './lib/python3.5/site-packages/Products/tagNavigator/browser'...
Listing './lib/python3.5/site-packages/Products/tagNavigator/browser/javascripts'...
Listing './lib/python3.5/site-packages/Products/tagNavigator/browser/stylesheets'...
Listing './lib/python3.5/site-packages/Products/tagNavigator/portlets'...
Compiling './lib/python3.5/site-packages/Products/tagNavigator/portlets/tagnavigator.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tagnavigator.py, line 54)
Listing './lib/python3.5/site-packages/Products/tagNavigator/profiles'...
Listing './lib/python3.5/site-packages/Products/tagNavigator/profiles/default'...
Listing './lib/python3.5/site-packages/Products/tagNavigator/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products.tagNavigator-1.1.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/contentMapper'...
Listing './lib/python3.5/site-packages/collective/contentMapper/browser'...
Listing './lib/python3.5/site-packages/collective/contentMapper/browser/images'...
Listing './lib/python3.5/site-packages/collective/contentMapper/browser/stylesheets'...
Compiling './lib/python3.5/site-packages/collective/contentMapper/categoryutils.py'...
***   File "./lib/python3.5/site-packages/collective/contentMapper/categoryutils.py", line 78
    print "updated from %s to %s"%(values[3], res)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/contentMapper/portlets'...
Compiling './lib/python3.5/site-packages/collective/contentMapper/portlets/selector.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (selector.py, line 69)
Listing './lib/python3.5/site-packages/collective/contentMapper/profiles'...
Listing './lib/python3.5/site-packages/collective/contentMapper/profiles/default'...
Listing './lib/python3.5/site-packages/collective.contentMapper-0.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
